tests/paczka1/small_fuzzy/22943516.err
Error in line 1: 1XGx S36 70,3
Error in line 6: 9cS S36 95,8
Error in line 11: k2m94wQXd A244 0,4
